--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,7 @@
    "outputs": [],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "\".com\""
+    "\".com\" ends with (\".com\")"
    ]
   },
   {
