--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -239,17 +239,17 @@
     {
      "data": {
       "text/plain": [
-       "'wwwvandelay'"
+       "'www.vandelay.com'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "'vandelay.com' # 'www.vandelay.com'\n",
-    "\"www\" + \"vandelay\""
+    "\"www.\" + \"vandelay.com\""
    ]
   },
   {
